--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -21,14 +21,26 @@ jobs:
     - name: Install system packages
       run: |
         sudo apt update
-        sudo apt install -y openjdk-17-jdk zip unzip
+        sudo apt install -y openjdk-17-jdk zip unzip wget
 
-    - name: Install Buildozer
+    - name: Install Python tooling
       run: |
         pip install --upgrade pip
         pip install buildozer cython
 
+    - name: Accept Android licenses
+      run: |
+        mkdir -p ~/.android
+        touch ~/.android/repositories.cfg
+        yes | sdkmanager --licenses || true
+
+    - name: Install Android SDK tools
+      run: |
+        sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+
     - name: Build APK
+      env:
+        PYTHONNOUSERSITE: 1
       run: |
         buildozer android debug
 
