--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -36,9 +36,11 @@ jobs:
 
     - name: Build APK
       env:
-        PYTHONNOUSERSITE: 1
+        PIP_USER: "no"
+        PYTHONNOUSERSITE: "0"
       run: |
         buildozer android debug
+
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
