--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -32,6 +32,10 @@ jobs:
       run: |
         mkdir -p ~/.android
         touch ~/.android/repositories.cfg
+        
+    - name: Clear Buildozer cache
+      run: |
+        rm -rf ~/.buildozer
 
 
     - name: Build APK
